[package]
name = "jj-prompt"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "Fast JJ prompt for starship"

[[bin]]
name = "jj-prompt"
path = "src/main.rs"

[dependencies]
jj-lib = "0.36"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
